[PeopleWorks] UPB4860 Gen3 MC03 V5 Rework/AXT CAMC-QI UC LAN/AXL(Library)/Dynamic Link/DAXA.h

typedef DWORD    PASCAL EXPORT funcAxaInfoIsAIOModule(DWORD *upStatus);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModuleNo(long lBoardNo, long lModulePos, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModuleCount(long *lpModuleCount);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetInputCount(long lModuleNo, long *lpCount);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetOutputCount(long lModuleNo, long *lpCount);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetChannelNoOfModuleNo(long lModuleNo, long *lpChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetChannelNoAdcOfModuleNo(long lModuleNo, long *lpChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetChannelNoDacOfModuleNo(long lModuleNo, long *lpChannelNo);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModule(long lModuleNo, long *lpBoardNo, long *lpModulePos, DWORD *upModuleID);
typedef DWORD    PASCAL EXPORT funcAxaInfoGetModuleStatus(long lModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiInfoGetModuleNoOfChannelNo(long lChannelNo, long *lpModuleNo);
typedef DWORD    PASCAL EXPORT funcAxaiInfoGetChannelCount(long *lpChannelCount);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetChannel(long lChannelNo, HWND hWnd, DWORD uMesssage, AXT_EVENT_PROC pProc, HANDLE *pEvent);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetChannelEnable(long lChannelNo, DWORD uUse);
typedef DWORD    PASCAL EXPORT funcAxaiEventGetChannelEnable(long lChannelNo, DWORD *upUse);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetMultiChannelEnable(long lSize, long *lpChannelNo, DWORD uUse);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetChannelMask(long lChannelNo, DWORD uMask);
typedef DWORD    PASCAL EXPORT funcAxaiEventGetChannelMask(long lChannelNo, DWORD *upMask);
typedef DWORD    PASCAL EXPORT funcAxaiEventSetMultiChannelMask(long lSize, long *lpChannelNo, DWORD uMask);
typedef DWORD    PASCAL EXPORT funcAxaiEventRead(long *lpChannelNo, DWORD *upMode);
typedef DWORD    PASCAL EXPORT funcAxaiInterruptSetModuleMask(long lModuleNo, DWORD uMask);
typedef DWORD    PASCAL EXPORT funcAxaiInterruptGetModuleMask(long lModuleNo, DWORD *upMask);
typedef DWORD    PASCAL EXPORT funcAxaiSetRange(long lChannelNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiGetRange(long lChannelNo, double *dpMinVolt, double *dpMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiSetRangeModule(long lModuleNo, double dMinVolt, double dMaxVolt);
typedef DWORD    PASCAL EXPORT funcAxaiHwStartMultiChannel(long lSize, long *lpChannelNo, long lBuffSize);
//---------------------------------------------------------//
extern funcAxaInfoIsAIOModule                   *AxaInfoIsAIOModule;
extern funcAxaInfoGetModuleNo                   *AxaInfoGetModuleNo;
extern funcAxaInfoGetModuleCount                *AxaInfoGetModuleCount;
extern funcAxaInfoGetInputCount                 *AxaInfoGetInputCount;
extern funcAxaInfoGetOutputCount                *AxaInfoGetOutputCount;
extern funcAxaInfoGetChannelNoOfModuleNo        *AxaInfoGetChannelNoOfModuleNo;
extern funcAxaInfoGetChannelNoAdcOfModuleNo     *AxaInfoGetChannelNoAdcOfModuleNo;
extern funcAxaInfoGetChannelNoDacOfModuleNo     *AxaInfoGetChannelNoDacOfModuleNo;
extern funcAxaInfoGetModule                     *AxaInfoGetModule;
extern funcAxaInfoGetModuleStatus               *AxaInfoGetModuleStatus;
extern funcAxaiInfoGetModuleNoOfChannelNo       *AxaiInfoGetModuleNoOfChannelNo;
extern funcAxaiInfoGetChannelCount              *AxaiInfoGetChannelCount;
extern funcAxaiEventSetChannel                  *AxaiEventSetChannel;
extern funcAxaiEventSetChannelEnable            *AxaiEventSetChannelEnable;
extern funcAxaiEventGetChannelEnable            *AxaiEventGetChannelEnable;
extern funcAxaiEventSetMultiChannelEnable       *AxaiEventSetMultiChannelEnable;
extern funcAxaiEventSetChannelMask              *AxaiEventSetChannelMask;
extern funcAxaiEventGetChannelMask              *AxaiEventGetChannelMask;
extern funcAxaiEventSetMultiChannelMask         *AxaiEventSetMultiChannelMask;
extern funcAxaiEventRead                        *AxaiEventRead;
extern funcAxaiInterruptSetModuleMask           *AxaiInterruptSetModuleMask;
extern funcAxaiInterruptGetModuleMask           *AxaiInterruptGetModuleMask;
extern funcAxaiSetRange                         *AxaiSetRange;
extern funcAxaiGetRange                         *AxaiGetRange;
extern funcAxaiSetRangeModule                   *AxaiSetRangeModule;
extern funcAxaiHwStartMultiChannel              *AxaiHwStartMultiChannel;